# OptimisedCentresOfRotationSkinning

./: .gitignore  CMakeLists.txt  LICENSE  LICENSE.MIT  README.md  example.cpp
include/cor/: Clock.h  CoRCalculator.h  CoRMesh.h  CoRTriangle.h  WeightsPerBone.h
shader/: dualquaternion.glsl  quaternion.glsl  skeletons.glsl
src/: Clock.cpp  CoRCalculator.cpp  CoRTriangle.cpp  WeightsPerBone.cpp
